[workspace]
members = ["maykr"]
resolver = "2"

[workspace.dependencies]
porter-utils = { path = "../porterlib/crates/porter-utils" }

minhook = "0.7"
widestring = "1.0"
arc-swap = "1.7.1"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Console",
    "Win32_System_Memory",
] }
winres = "0.1"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
